# QMLTodoApp

./: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
backend/include/: backendhelper.hpp
backend/src/: backendhelper.cpp
utils/: AppPopup.qml  CustomPopup.qml  CustomScrollBar.qml  CustomTextField.qml
